VERSION 2.6.3

* Fixed a bug in protein translation output of partial genes where TTG/GTG
codons were being incorrectly translated to methionine.

VERSION 2.6.2

* Added support for translation table 25.
* Corrected another bug affecting MacOS.
* Fixed a line in the 'uninstall' directive in the Makefile.

VERSION 2.6.1

* Fixed a bug that mainly affected Mac compiles 7/2013 and
posted to Google Code and Github as 2.60 (bad, as we already
had a 2.60).  Re-releasing this version 8/2014 as 2.6.1,
but the source is identical to "2.60bugfix1" except for updated dates.
a more streamlined Makefile, and a new markdown README.md.
* Moved to semantic versioning (major.minor.patch) with the 8/2014
re-release.  Committed to being more rigorous about this moving
forward.

VERSION 2.60

* Minor Output Changes:  There are some output changes in this version.  See
below for more details.
* Added a confidence score to the output, representing the % likelihood the
gene is real. (conf=99.99;, etc.)
* Redid the training for metagenomic gene prediction and added more weights
and rules.  Upped the number of training files to 50.
* Eliminated the sampling phase of metagenomic prediction and replaced it with
running on all training files within a given range of GC content.
* Fixed a bug where Prodigal incorrectly reported "Piped input detected..."
when there was no piped input.
* Changed the output function not to replace header names unless the header
is empty (formerly replaced headers <4 letters in length).
* Changed the output function to report the first word of headers in GFF/
Genbank outputs as is, without checking for GFF3 characters that need to be
escaped.
* Eliminated the sequence number from the protein translation/mrna outputs.
* Fixed a bug in protein translation where N's in the nucleotide sequence
were being translated to P's instead of X's.

VERSION 2.50

* In GFF output, changed "type=ATG" to "start_type=ATG" to fix a bug where